Fix Navigation, add Scrollbar css

--- a/src/layouts/App/global.css
+++ b/src/layouts/App/global.css
@@ -26,6 +26,23 @@ body {
     outline: none;
   }
 }
+body::-webkit-scrollbar-track
+{
+    border-radius: 10px;
+    background-color: transparent;
+}
+
+body::-webkit-scrollbar
+{
+    width: 7px;
+    background-color: transparent;
+}
+
+body::-webkit-scrollbar-thumb
+{
+    border-radius: 5px;
+    background-color: var(--colorTextBody);
+}
 
 :where(code, pre) {
   font-family: var(--monoFontStack);
